--- a/index.html
+++ b/index.html
@@ -1,38 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Favigo - Preview Your Favicon | Patriarxis</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favicon Tester</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon">
-</head>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-
-  <div class="root">
-    <div class="app">
-      <div class="container">
-
-        <div class="box">
-          <form>
-            <label class="f-header-1">Test your favicon</label>
-            <label class="upload f-paragraph-1"><span class="choose-file">Choose file</span>
-              <input type="file" id="favicon" name="filename" accept=".ico,.png">
-              <span class="filename f-paragraph-2"></span>
-            </label>
-            <i class="f-paragraph-2">Files must be ico or png format</i>
-          </form>
-        </div>
-
-      </div>
-    </div>
-  </div>
-
-  <script src="index.js"></script>
-
-</body>
-
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Favigo" />
+    <link rel="manifest" href="/site.webmanifest" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
